--- a/ferah-chat-FINAL.html
+++ b/ferah-chat-FINAL.html
@@ -7,8 +7,8 @@
   <title>Ferah Chat (Online)</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script type="module">
-    import { initializeApp } from "https://ferah-chat-8e706-default-rtdb.firebaseio.com/";
-    import { getDatabase, ref, push, onChildAdded } from "https://ferah-chat-8e706-default-rtdb.firebaseio.com/";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
+    import { getDatabase, ref, push, onChildAdded } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-database.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyBbLP9nTUbWhx5ah_41cO1ikOY9ge9eSKA",
