--- a/ferah-chat-FINAL.html
+++ b/ferah-chat-FINAL.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ferah Chat (Online)</title>
+  <title>Ferah Chat (TAM SÜRÜM)</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
-    import { getDatabase, ref, push, onChildAdded } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-database.js";
+    import { getDatabase, ref, push, onChildAdded, onDisconnect, serverTimestamp, set } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-database.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyBbLP9nTUbWhx5ah_41cO1ikOY9ge9eSKA",
@@ -22,17 +22,22 @@
 
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
-    const chatRef = ref(db, "messages");
+    const chatRef = ref(db, "rooms/genel/messages");
+    const onlineRef = ref(db, "rooms/genel/online");
 
     document.addEventListener("DOMContentLoaded", () => {
       const chatBox = document.getElementById("chatBox");
       const sendBtn = document.getElementById("sendBtn");
       const messageInput = document.getElementById("messageInput");
       const usernameInput = document.getElementById("username");
+      const onlineList = document.getElementById("onlineList");
       const toggleTheme = document.getElementById("toggleTheme");
       const emojiBtn = document.getElementById("emojiBtn");
       const emojiPicker = document.getElementById("emojiPicker");
       const body = document.body;
+
+      // Ses efekti
+      const audio = new Audio("https://www.myinstants.com/media/sounds/bleep.mp3");
 
       toggleTheme.addEventListener("click", () => {
         body.classList.toggle("dark");
@@ -49,24 +54,46 @@
         emojiPicker.style.display = "none";
       });
 
+      // Giriş yapan kullanıcıyı online olarak ekle
+      let username = "";
+      usernameInput.addEventListener("change", () => {
+        username = usernameInput.value.trim() || "Anonim";
+        const userRef = ref(db, `rooms/genel/online/${username}`);
+        set(userRef, true);
+        onDisconnect(userRef).remove();
+      });
+
       sendBtn.addEventListener("click", () => {
-        const username = usernameInput.value.trim() || "Anonim";
+        username = usernameInput.value.trim() || "Anonim";
         const message = messageInput.value.trim();
         if (!message) return;
         push(chatRef, {
           user: username,
-          text: message
+          text: message,
+          time: new Date().toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' })
         });
         messageInput.value = "";
       });
 
       onChildAdded(chatRef, (data) => {
-        const { user, text } = data.val();
+        const { user, text, time } = data.val();
         const bubble = document.createElement("div");
-        bubble.innerHTML = `<strong>${user}:</strong> ${text}`;
-        bubble.className = "p-2 rounded my-1 " + (body.classList.contains("dark") ? "bg-gray-700 text-white" : "bg-gray-200");
+        bubble.innerHTML = `
+          <div class="p-2 rounded my-1 max-w-[75%] ${body.classList.contains("dark") ? "bg-gray-700 text-white" : "bg-gray-200"}">
+            <div class="text-sm font-bold">${user} <span class="text-xs opacity-70">(${time})</span></div>
+            <div>${text}</div>
+          </div>`;
         chatBox.appendChild(bubble);
         chatBox.scrollTop = chatBox.scrollHeight;
+        audio.play();
+      });
+
+      // Online kullanıcıları listele
+      onChildAdded(onlineRef, (data) => {
+        const li = document.createElement("li");
+        li.textContent = data.key;
+        li.id = "user-" + data.key;
+        onlineList.appendChild(li);
       });
     });
   </script>
@@ -81,19 +108,27 @@
     <button id="toggleTheme" class="bg-gray-800 text-white px-4 py-2 rounded">🌙 Tema Değiştir</button>
   </div>
 
-  <div class="max-w-xl mx-auto p-4">
-    <h1 class="text-2xl font-bold mb-4 text-center">Ferah Chat</h1>
+  <div class="max-w-4xl mx-auto p-4">
+    <h1 class="text-2xl font-bold mb-4 text-center">Ferah Chat (Genel Oda)</h1>
 
-    <div id="chatBox" class="bg-white dark:bg-gray-800 border dark:border-gray-700 h-64 overflow-y-auto p-4 rounded mb-4"></div>
+    <div class="flex gap-4">
+      <div class="flex-1">
+        <div id="chatBox" class="bg-white dark:bg-gray-800 border dark:border-gray-700 h-64 overflow-y-auto p-4 rounded mb-4"></div>
 
-    <div class="flex gap-2">
-      <input type="text" id="username" placeholder="İsmin" class="w-1/4 px-2 py-1 border rounded" />
-      <input type="text" id="messageInput" placeholder="Mesaj..." class="w-full px-2 py-1 border rounded" />
-      <button id="sendBtn" class="bg-blue-500 text-white px-4 py-1 rounded">Gönder</button>
-      <button id="emojiBtn">😀</button>
+        <div class="flex gap-2">
+          <input type="text" id="username" placeholder="İsmin" class="w-1/4 px-2 py-1 border rounded" />
+          <input type="text" id="messageInput" placeholder="Mesaj..." class="w-full px-2 py-1 border rounded" />
+          <button id="sendBtn" class="bg-blue-500 text-white px-4 py-1 rounded">Gönder</button>
+          <button id="emojiBtn">😀</button>
+        </div>
+        <emoji-picker id="emojiPicker" style="position: absolute; display: none;"></emoji-picker>
+      </div>
+
+      <div class="w-48 bg-gray-100 dark:bg-gray-900 p-2 rounded">
+        <h2 class="font-bold mb-2">🟢 Online Kullanıcılar</h2>
+        <ul id="onlineList" class="text-sm list-disc pl-4 space-y-1"></ul>
+      </div>
     </div>
-
-    <emoji-picker id="emojiPicker" style="position: absolute; display: none;"></emoji-picker>
 
     <div class="mt-4 text-center text-sm opacity-60">Yapımcı: Hamza & kankası Ferah ❤️</div>
   </div>
